API updates to have more logical routes for models and makefile modified
