# openapi/cc.yaml
@@ -162,9 +162,6 @@ paths:
       x-openapi-router-controller: api.activity.model
   "/activities/{id}":
     get:
-      security:
-        - apiKeyHeader: []
-        - anonUser: []
       tags:
         - Activities
       summary: Get a single activity
@@ -230,10 +227,106 @@ paths:
         "404":
           description: Activity does not exist
       x-openapi-router-controller: api.activity.model
-  /comments:
+  "/tasks/{id}/submissions":
     get:
       security:
         - apiKeyHeader: []
+      tags:
+        - Tasks
+        - Submissions
+      summary: Get submissions for a specific task
+      operationId: get_task_submissions
+      parameters:
+        - name: id
+          in: path
+          schema:
+            type: string
+        - name: limit
+          in: query
+          schema:
+            type: integer
+            minimum: 0
+            default: 20
+        - name: offset
+          in: query
+          schema:
+            type: integer
+            default: 0
+      responses:
+        "200":
+          description: List of submissions
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: object
+                  required:
+                    - task_id
+                    - user_id
+                  allOf:
+                    - type: object
+                      properties:
+                        id:
+                          type: string
+                          maxLength: 100
+                          readOnly: true
+                        info:
+                          type: object
+                          description: A JSON field to extend a model with extra info
+                        created_at:
+                          type: string
+                          format: date-time
+                          description: Creation time
+                          example: 2015-07-07T15:49:51.230+02:00
+                          readOnly: true
+                        updated_at:
+                          type: string
+                          format: date-time
+                          description: Creation time
+                          example: 2015-07-07T15:49:51.230+02:00
+                          readOnly: true
+                  properties:
+                    task_id:
+                      type: string
+                    user_id:
+                      type: string
+                    content:
+                      type: object
+      x-openapi-router-controller: api.task.custom
+  "/activities/{id}/tasks":
+    get:
+      tags:
+        - Activities
+        - Tasks
+      summary: Get the tasks for an activity
+      operationId: get_activity_tasks
+      parameters:
+        - description: The Activity ID
+          name: id
+          in: path
+          required: true
+          schema:
+            type: string
+            pattern: ^[a-zA-Z0-9-]+$
+        - name: limit
+          in: query
+          schema:
+            type: number
+            default: 20
+        - name: offset
+          in: query
+          schema:
+            type: number
+            default: 0
+      responses:
+        "200":
+          description: Return activity tasks
+        "404":
+          description: Activity does not exist
+      x-openapi-router-controller: api.activity.custom
+  /comments:
+    get:
       tags:
         - Comments
       summary: Get a single comment
@@ -360,6 +453,7 @@ paths:
     get:
       security:
         - apiKeyHeader: []
+        - anonUser: []
       tags:
         - Comments
       summary: Get a single comment
@@ -432,9 +526,6 @@ paths:
       x-openapi-router-controller: api.comment.model
   /media:
     get:
-      security:
-        - apiKeyHeader: []
-        - anonUser: []
       description: Get a list of media
       tags:
         - Media
@@ -510,9 +601,6 @@ paths:
       x-openapi-router-controller: api.media.model
   "/media/source/{id}":
     get:
-      security:
-        - apiKeyHeader: []
-        - anonUser: []
       tags:
         - Media
       summary: Query media for a specific task or project
@@ -600,9 +688,6 @@ paths:
       x-openapi-router-controller: api.media.model
   "/media/{id}":
     get:
-      security:
-        - apiKeyHeader: []
-        - anonUser: []
       tags:
         - Media
       summary: Get a single file
@@ -660,7 +745,6 @@ paths:
     get:
       security:
         - apiKeyHeader: []
-        - anonUser: []
       tags:
         - Media
       summary: Return pre-authorised url to upload media
@@ -810,9 +894,6 @@ paths:
       x-openapi-router-controller: api.project.model
   "/projects/{id}":
     get:
-      security:
-        - apiKeyHeader: []
-        - anonUser: []
       tags:
         - Projects
       summary: Get a single project
@@ -878,71 +959,26 @@ paths:
         "404":
           description: Project does not exist
       x-openapi-router-controller: api.project.model
-  "/projects/{id}/submissions":
+  "/projects/{id}/activities":
     get:
-      security:
-        - apiKeyHeader: []
       tags:
         - Projects
-      summary: Get submissions for a specific project
-      operationId: get_project_submissions
+        - Activities
+      summary: Get all activities related to a project
+      operationId: get_project_activities
       parameters:
-        - name: id
+        - description: The ID of the project
+          name: id
           in: path
+          required: true
           schema:
             type: string
-        - name: limit
-          in: query
-          schema:
-            type: integer
-            minimum: 0
-            default: 20
-        - name: offset
-          in: query
-          schema:
-            type: integer
-            default: 0
+            pattern: ^[a-zA-Z0-9-]+$
       responses:
         "200":
-          description: List of submissions
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  type: object
-                  required:
-                    - task_id
-                    - user_id
-                  allOf:
-                    - type: object
-                      properties:
-                        id:
-                          type: string
-                          maxLength: 100
-                          readOnly: true
-                        info:
-                          type: object
-                          description: A JSON field to extend a model with extra info
-                        created_at:
-                          type: string
-                          format: date-time
-                          description: Creation time
-                          example: 2015-07-07T15:49:51.230+02:00
-                          readOnly: true
-                        updated_at:
-                          type: string
-                          format: date-time
-                          description: Creation time
-                          example: 2015-07-07T15:49:51.230+02:00
-                          readOnly: true
-                  properties:
-                    task_id:
-                      type: string
-                    user_id:
-                      type: string
-                    content:
-                      type: object
+          description: Return Activities
+        "404":
+          description: Project does not exist
       x-openapi-router-controller: api.project.custom
   "/submission/{id}":
     get:
@@ -967,8 +1003,8 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/paths/~1projects~1%7Bid%7D~1submissions/get/responses/200/\
-                  content/application~1json/schema/items"
+                $ref: "#/paths/~1tasks~1%7Bid%7D~1submissions/get/responses/200/con\
+                  tent/application~1json/schema/items"
         "404":
           description: Submission does not exist
       x-openapi-router-controller: api.submission.model
@@ -1055,11 +1091,9 @@ paths:
       x-openapi-router-controller: api.submission.model
   /submissions:
     get:
-      security:
-        - apiKeyHeader: []
       tags:
         - Submissions
-      summary: Get a single submission
+      summary: Get all submissions
       operationId: get_submissions
       parameters:
         - name: search_term
@@ -1080,8 +1114,8 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: "#/paths/~1projects~1%7Bid%7D~1submissions/get/responses/20\
-                    0/content/application~1json/schema/items"
+                  $ref: "#/paths/~1tasks~1%7Bid%7D~1submissions/get/responses/200/c\
+                    ontent/application~1json/schema/items"
       x-openapi-router-controller: api.submission.model
     post:
       security:
@@ -1099,8 +1133,8 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/paths/~1projects~1%7Bid%7D~1submissions/get/responses/200/\
-                  content/application~1json/schema/items"
+                $ref: "#/paths/~1tasks~1%7Bid%7D~1submissions/get/responses/200/con\
+                  tent/application~1json/schema/items"
       x-openapi-router-controller: api.submission.model
   /submissions/count:
     get:
@@ -1361,71 +1395,6 @@ paths:
         "204":
           description: Task was deleted
       x-openapi-router-controller: api.task.model
-  /users:
-    get:
-      security:
-        - oauth2: []
-      tags:
-        - Users
-      operationId: get_users
-      parameters:
-        - name: search_term
-          in: query
-          schema:
-            type: string
-        - name: limit
-          in: query
-          schema:
-            type: integer
-            minimum: 0
-            default: 20
-      responses:
-        "200":
-          description: Return all users
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  type: object
-                  required:
-                    - pwd
-                  allOf:
-                    - type: object
-                      properties:
-                        id:
-                          type: string
-                          maxLength: 100
-                          readOnly: true
-                        info:
-                          type: object
-                          description: A JSON field to extend a model with extra info
-                        created_at:
-                          type: string
-                          format: date-time
-                          description: Creation time
-                          example: 2015-07-07T15:49:51.230+02:00
-                          readOnly: true
-                        updated_at:
-                          type: string
-                          format: date-time
-                          description: Creation time
-                          example: 2015-07-07T15:49:51.230+02:00
-                          readOnly: true
-                  properties:
-                    username:
-                      type: string
-                    email:
-                      type: string
-                      format: email
-                    pwd:
-                      type: string
-                    api_key:
-                      type: string
-                    anonymous:
-                      type: boolean
-                      default: false
-      x-openapi-router-controller: api.user.model
   /users/authorize:
     post:
       tags:
@@ -1557,34 +1526,59 @@ paths:
               schema:
                 type: object
       x-openapi-router-controller: api.user.custom
-  "/users/{id}":
+  /users/me:
     get:
       security:
         - apiKeyHeader: []
         - anonUser: []
       tags:
         - Users
-      summary: Get all users (or those matching an ID)
+      summary: Get specific user
       operationId: get_user
-      parameters:
-        - description: The unique identifer for an Object (i.e. User, Task, Project,
-            Submission etc)
-          name: id
-          in: path
-          required: true
-          schema:
-            type: string
-            pattern: ^[a-zA-Z0-9-]+$
       responses:
         "200":
-          description: Return users
+          description: Return user
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  $ref: "#/paths/~1users/get/responses/200/content/application~1jso\
-                    n/schema/items"
+                type: object
+                required:
+                  - pwd
+                allOf:
+                  - type: object
+                    properties:
+                      id:
+                        type: string
+                        maxLength: 100
+                        readOnly: true
+                      info:
+                        type: object
+                        description: A JSON field to extend a model with extra info
+                      created_at:
+                        type: string
+                        format: date-time
+                        description: Creation time
+                        example: 2015-07-07T15:49:51.230+02:00
+                        readOnly: true
+                      updated_at:
+                        type: string
+                        format: date-time
+                        description: Creation time
+                        example: 2015-07-07T15:49:51.230+02:00
+                        readOnly: true
+                properties:
+                  username:
+                    type: string
+                  email:
+                    type: string
+                    format: email
+                  pwd:
+                    type: string
+                  api_key:
+                    type: string
+                  anonymous:
+                    type: boolean
+                    default: false
         "404":
           description: User not found
       x-openapi-router-controller: api.user.model
@@ -1651,28 +1645,18 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/paths/~1users/get/responses/200/content/application~1json/\
-                  schema/items"
+                $ref: "#/paths/~1users~1me/get/responses/200/content/application~1j\
+                  son/schema"
         "404":
           description: User not found
       x-openapi-router-controller: api.user.model
     delete:
       security:
         - apiKeyHeader: []
-        - anonUser: []
       tags:
         - Users
       summary: Delete user (only allowed by the user themselves)
       operationId: delete_user
-      parameters:
-        - description: The unique identifer for an Object (i.e. User, Task, Project,
-            Submission etc)
-          name: id
-          in: path
-          required: true
-          schema:
-            type: string
-            pattern: ^[a-zA-Z0-9-]+$
       responses:
         "200":
           description: User deleted
@@ -1681,24 +1665,15 @@ paths:
         "404":
           description: User not found
       x-openapi-router-controller: api.user.model
-  "/users/{id}/submissions":
+  /users/submissions:
     get:
       security:
         - apiKeyHeader: []
-        - anonUser: []
       tags:
         - Users
+        - Submissions
       summary: Get all submissions for a user (or those matching an ID)
       operationId: get_subs
-      parameters:
-        - description: The unique identifer for an Object (i.e. User, Task, Project,
-            Submission etc)
-          name: id
-          in: path
-          required: true
-          schema:
-            type: string
-            pattern: ^[a-zA-Z0-9-]+$
       responses:
         "200":
           description: Return submissions
@@ -1707,8 +1682,8 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: "#/paths/~1projects~1%7Bid%7D~1submissions/get/responses/20\
-                    0/content/application~1json/schema/items"
+                  $ref: "#/paths/~1tasks~1%7Bid%7D~1submissions/get/responses/200/c\
+                    ontent/application~1json/schema/items"
         "404":
           description: User not found
       x-openapi-router-controller: api.user.custom
